[b]Version 0.6.8[/b]:

(2009-07-07)
 * Applied patch numbered_recent_files.diff by greenest 
   (greenest at users.sourceforge.net). It adds numbers in front of the recent 
   files, and a key accelerator.

(2009-07-06)
 * Save the last TV channel, which will be used when "dvb://" or "tv://" is
   opened.

(2009-07-05)
 * (Linux) vdpau doesn't allow to use any video filter (mplayer would crash)
   so now smplayer will clear the filter list if vdpau is used.
 * New option for smplayer.ini (section [playlist]): automatically_play_next.
   If set to false the playlist won't play the next item when the current one
   finishes.

(2009-07-04)
 * The settings of TV channels are saved on ~/.config/smplayer/smplayer_tv.ini.

(2009-07-02)
 * Added a new section in the preferences dialog: TV and radio.

(2009-06-30)
 * Apply patch play_action_disabled_while_playing.diff by Francesco Cosoleto.
   (cosoleto at users.sourceforge.net). It disables the play action while 
   playing.
 * (Fix) Now the command line option -sub passes the subtitle file to another 
   running instance.

(2009-06-29)
 * Added actions to select the previous and next tv channels, and also for
   previous and next radio. Assigned by default to the keys L and H (for TV) 
   and Shift+L and Shift+H for radio.

(2009-06-28)
 * Changing chapters works again with mplayer > svn r29407 (0-based).
   For DVDs, it only works if cache = 0.
 * Added two options for smplayer.ini (section [tv]): 
   check_channels_conf_on_startup and initial_tv_deinterlace.

(2009-06-27)
 * The tv and radio submenus can be added to the toolbars (tv_menu and 
   radio_menu).

(2009-06-25)
 * New menus Open->TV and Open->Radio. The items for those menus are taken from
   ~/.mplayer/channels.conf. The services with video and audio pid are added
   to the TV menu, those with audio pid are added to the radio menu. The
   rest are discarded. The file channels.conf is rescanned on every startup
   and will add new channels to the menus. 